@@ -113,6 +113,7 @@
 			<label index="label_event_type">Event type</label>
 			<label index="label_target_groups">Target Groups</label>
 			<label index="label_organizers">Organizers</label>
+			<label index="label_organizing_partners">Organizing partners</label>
 			<label index="label_vacancies">Vacancies</label>
 			<label index="label_deadline_registration">Deadline for registration</label>
 			<label index="label_status_registration">Status</label>
@@ -524,6 +525,7 @@
 			<label index="label_event_type">Veranstaltungsart</label>
 			<label index="label_target_groups">Zielgruppen</label>
 			<label index="label_organizers">Veranstalter</label>
+			<label index="label_organizing_partners">Kooperationspartner</label>
 			<label index="label_vacancies">Freie Plätze</label>
 			<label index="label_deadline_registration">Anmeldeschluss</label>
 			<label index="label_status_registration">Status</label>
@@ -1720,6 +1722,7 @@
 			<label index="label_event_type" type="integer">99114704</label>
 			<label index="label_target_groups" type="integer">206184555</label>
 			<label index="label_organizers" type="integer">68798680</label>
+			<label index="label_organizing_partners" type="integer">1285796</label>
 			<label index="label_vacancies" type="integer">99017107</label>
 			<label index="label_deadline_registration" type="integer">106717060</label>
 			<label index="label_status_registration" type="integer">247806604</label>
@@ -2729,6 +2732,7 @@
 			<label index="label_event_type">Event type</label>
 			<label index="label_target_groups">Target Groups</label>
 			<label index="label_organizers">Organizers</label>
+			<label index="label_organizing_partners">Organizing partners</label>
 			<label index="label_vacancies">Vacancies</label>
 			<label index="label_deadline_registration">Deadline for registration</label>
 			<label index="label_status_registration">Status</label>
