@@ -250,7 +250,13 @@
 <!-- ###FIELD_WRAPPER_TARGET_GROUPS### --><!-- ###FIELD_WRAPPER_ORGANIZERS### --><h3>###LABEL_ORGANIZERS###</h3>
 <p>###ORGANIZERS###</p>
 
-<!-- ###FIELD_WRAPPER_ORGANIZERS### --><!-- ###FIELD_WRAPPER_VACANCIES### --><h3>###LABEL_VACANCIES###</h3>
+<!-- ###FIELD_WRAPPER_ORGANIZERS### -->
+<!-- ###FIELD_WRAPPER_ORGANIZING_PARTNERS### -->
+<h3>###LABEL_ORGANIZING_PARTNERS###</h3>
+<p>###ORGANIZING_PARTNERS###</p>
+<!-- ###FIELD_WRAPPER_ORGANIZING_PARTNERS### -->
+<!-- ###FIELD_WRAPPER_VACANCIES### -->
+<h3>###LABEL_VACANCIES###</h3>
 <p>###VACANCIES###</p>
 
 <!-- ###FIELD_WRAPPER_VACANCIES### --><!-- ###FIELD_WRAPPER_DEADLINE_REGISTRATION### --><h3>###LABEL_DEADLINE_REGISTRATION###</h3>
